[gd_scene load_steps=3 format=3 uid="uid://bhfuxgggenask"]

[ext_resource type="FontFile" uid="uid://cmh68fet10ro" path="res://fonts/xolonium-regular.ttf" id="1_arb4f"]
[ext_resource type="Script" path="res://hud.gd" id="1_yjgd2"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_yjgd2")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_arb4f")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -27.0
offset_right = 240.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_arb4f")
theme_override_font_sizes/font_size = 45
text = "Dodge' Em All"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = 65.0
offset_right = 70.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_arb4f")
theme_override_font_sizes/font_size = 36
text = "START"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
